--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "type": "tsc --noEmit",
+    "lint": "eslint . --ext .ts,.tsx,.js"
   },
   "dependencies": {
     "gatsby": "^2.23.10",
@@ -21,6 +21,11 @@
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "3.5.0",
+    "@typescript-eslint/parser": "3.5.0",
+    "eslint": "7.3.1",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.4",
     "prettier": "^2.0.5",
     "typescript": "^3.9.5"
   }
