--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "lint": "eslint . --ext .ts,.tsx,.js --fix"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "gatsby": "^2.23.18",
+    "gatsby-plugin-emotion": "^4.3.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
