--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^10.0.27",
     "gatsby": "^2.23.18",
     "gatsby-plugin-emotion": "^4.3.9",
+    "gatsby-plugin-graphql-codegen": "^2.7.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
