--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.23.18",
     "gatsby-plugin-emotion": "^4.3.9",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
+    "gatsby-plugin-manifest": "^2.4.17",
     "gatsby-source-filesystem": "^2.3.18",
     "gatsby-transformer-remark": "^2.8.23",
     "react": "^16.12.0",
