--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "gatsby develop",
+    "dev": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -36,9 +37,9 @@
     "@typescript-eslint/parser": "^3.5.0",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-config-react": "1.1.7",
+    "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "7.20.3",
+    "eslint-plugin-react": "^7.20.3",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
