--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   },
   "dependencies": {
     "gatsby": "^2.23.18",
+    "gatsby-image": "^2.4.13",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-manifest": "^2.4.17",
     "gatsby-plugin-offline": "^3.2.16",
     "gatsby-plugin-react-helmet": "^3.3.9",
     "gatsby-plugin-sass": "^2.3.12",
+    "gatsby-plugin-sharp": "^2.6.19",
+    "gatsby-remark-images": "^3.3.18",
     "gatsby-source-filesystem": "^2.3.18",
     "gatsby-transformer-remark": "^2.8.23",
+    "gatsby-transformer-sharp": "^2.5.11",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
