--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "type": "tsc --noEmit",
     "lint:ts": "eslint . --ext .ts,.tsx,.js --fix",
     "lint:scss": "stylelint ./**/*.scss --fix",
-    "lint": "yarn lint:ts && yarn lint:scss"
+    "lint": "yarn lint:ts && yarn lint:scss",
+    "new-blog": "ts-node util/createNewBlog.ts"
   },
   "dependencies": {
+    "dayjs": "^1.8.29",
     "gatsby": "^2.23.18",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-manifest": "^2.4.17",
