--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "dayjs": "^1.8.29",
     "gatsby": "^2.23.18",
     "gatsby-image": "^2.4.13",
+    "gatsby-plugin-canonical-urls": "^2.3.10",
     "gatsby-plugin-manifest": "^2.4.17",
     "gatsby-plugin-offline": "^3.2.16",
     "gatsby-plugin-react-helmet": "^3.3.9",
     "gatsby-plugin-sass": "^2.3.12",
     "gatsby-plugin-sharp": "^2.6.19",
+    "gatsby-plugin-sitemap": "2.4.11",
     "gatsby-remark-code-titles": "^1.1.0",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^3.3.18",
