--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby": "^2.23.18",
     "gatsby-image": "^2.4.13",
     "gatsby-plugin-canonical-urls": "^2.3.10",
+    "gatsby-plugin-google-analytics": "^2.3.11",
     "gatsby-plugin-manifest": "^2.4.17",
     "gatsby-plugin-offline": "^3.2.16",
     "gatsby-plugin-react-helmet": "^3.3.9",
