--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,6 +7,6 @@
   "ignoreFiles": [
     "node_modules/**/*.scss",
     "public/**/*.scss",
-    "static/styles/_reset.scss"
+    "src/assets/styles/_reset.scss"
   ]
 }
