--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "deploy": "gatsby build && firebase deploy",
+    "deploy": "gatsby clean && gatsby build && firebase deploy",
     "clean": "gatsby clean",
     "type": "tsc --noEmit",
     "lint:ts": "eslint . --ext .ts,.tsx,.js --fix",
