--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,8 @@
         "**/*.js"
       ],
       "rules": {
-        "@typescript-eslint/no-var-requires": 0
+        "@typescript-eslint/no-var-requires": 0,
+        "@typescript-eslint/explicit-module-boundary-types": 0
       }
     }
   ],
